--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,20 @@
-/* hello */
+.top {
+    background-color: rgb(104, 200, 245);
+    width: 200px;
+}
+.search-button {
+    background-color: rgb(56, 182, 98);
+
+
+}
+.noidea {
+    background-color: rgb(250, 247, 96);
+    color: black
+
+}
+.search-bar {
+    width: 555px;
+    background-color: rgb(240, 236, 231);
+    border: rgb(27, 26, 26), 2pt, solid;
+    color: black
+}
